# Woopenbaar

./: .gitignore  LICENSE  README.md  chat_history.json  frontend_tunnel.sh  pyproject.toml  pyrightconfig.json  run_tests.sh
.github/workflows/: code-check.yml
backend/: README.md  __init__.py  app.py
backend/conf/: README.md  __init__.py  config.py  prompts.py
backend/examples/: generate_and_train_rag.py  train_rag.py
backend/src/: __init__.py
backend/tests/: README_INVARIANT_TESTING.md  conftest.py  setup.cfg
evaluation/RAGAS/: evaluate_retrieval.py  generate_benchmark.py  multi_k_evaluation_results.json  retrieval_benchmarks.json
evaluation/chunking/: comparer.py  inspect_chunker.py
evaluation/cleaning/: inspect_cleaning.py
evaluation/util/: v1_benchmark.json
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: explanation.md
modal/: llm_service.py
scraper/: README.md  create_vws_metadata.py  scrape_documents.py  scrape_vws.py  website_specific.py
standard_data_format/: .env.example  README.md  requirements.txt
standard_data_format/config/: default.yaml  gemini_config.yaml  local_config.yaml
standard_data_format/scripts/: combine_results.sh  create_run_workers.sh  distribute_metadata.sh  divide_metadata.sh  run_gemini_worker.sh  run_local_worker.sh
standard_data_format/src/: __init__.py  custom_marker.py  divide_metadata.py  document.py  document_processing_pipeline.py  document_processor.py  metadata.py  multiprocess.py  pdf_converter.py
standard_data_format/tests/: conftest.py  (+13 more)
(+140 files in other folders)
