[project]
name = "raggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.2.10",
    "bs4>=0.0.2",
    "datasets>=3.5.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "openai>=1.70.0",
    "pyright>=1.1.398",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.1",
    "setuptools>=78.1.0",
    "transformers>=4.50.3",
    "uvicorn>=0.34.0",
    "vllm>=0.8.2",
    "flask-cors>=5.0.1",
    "flask-pydantic>=0.13.0",
    "requests-oauthlib>=2.0.0",
    "tqdm>=4.67.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "fsspec>=2023.1.0,<=2024.2.0",
    "pyyaml>=6.0.2",
]
